CRUD Operation - Get

--- a/StudentManagement/ClientApp/projects/angular-student-management/src/app/administration/teacher/teacher.component.html
+++ b/StudentManagement/ClientApp/projects/angular-student-management/src/app/administration/teacher/teacher.component.html
@@ -48,9 +48,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let users of RegisteredUserList">
-        <td>{{users.Id}}</td>
-        <td>{{users.UserName}}</td>
-        <td>{{users.Email}}</td>
+        <td>{{users.id}}</td>
+        <td>{{users.userName}}</td>
+        <td>{{users.email}}</td>
       </tr>
     </tbody>
   </table>
