--- a/StudentManagement/ClientApp/projects/angular-student-management/src/app/administration/teacher/teacher.component.html
+++ b/StudentManagement/ClientApp/projects/angular-student-management/src/app/administration/teacher/teacher.component.html
@@ -44,6 +44,7 @@
         <th>Teacher Id</th>
         <th>User name</th>
         <th>Email</th>
+        <th>Options</th>
       </tr>
     </thead>
     <tbody>
@@ -51,6 +52,29 @@
         <td>{{users.id}}</td>
         <td>{{users.userName}}</td>
         <td>{{users.email}}</td>
+        <td>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-light btn-outline-danger mr-1" data-toggle="modal" data-target="#DeleteModal" (click)="onModalDelete(users.id)">Delete</button>
+          <!-- Modal -->
+          <div class="modal fade" id="DeleteModal" tabindex="-1" role="dialog" aria-labelledby="DeleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="DeleteModalLabel">Confirm Delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Are you sure?</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-light btn-outline-danger mr-1" (click)="Delete()">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </td>
       </tr>
     </tbody>
   </table>
